--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lodash": "^4.17.4",
 		"react": "16.0.0",
 		"react-native": "0.50.4",
+		"react-native-communications": "^2.2.1",
 		"react-native-router-flux": "^3.43.0",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
@@ -19,6 +20,7 @@
 	"devDependencies": {
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
+		"eslint-config-rallycoding": "^3.2.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0"
 	},
