--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"start": "react-native-scripts start",
 		"test": "jest"
 	},
 	"dependencies": {
@@ -13,6 +13,7 @@
 		"react-native": "0.50.4",
 		"react-native-communications": "^2.2.1",
 		"react-native-router-flux": "^3.43.0",
+		"react-native-scripts": "^1.8.1",
 		"react-redux": "^5.0.6",
 		"redux": "^3.7.2",
 		"redux-thunk": "^2.2.0"
